# Extrator_server

./: .gitignore  Descritivo.md  README.md  ai-governance-portal-with-reports.tsx  classificacoes.csv  classificacoes.db  dashboard.py  governanca.html  main.py  main2.py  main3.py  melhorias.md  plano_implementacao.md  presentation.html  presentation2.html  pyproject.toml  requirements.txt
faiss_index/: index.faiss  index.pkl
textos_paginas/: pagina_1.txt  pagina_2.txt  pagina_3.txt  pagina_4.txt  pagina_5.txt  pagina_6.txt  pagina_7.txt  pagina_8.txt  pagina_9.txt  vetorial_pagina_6.txt  vetorial_pagina_9.txt
